markdown/2.5.0/MarkdownToHTML.md
# Module MarkDownToHTML 2.5.0 {.title}

**Tags**: Markdown, HTML, Converter, Markdown, HTML, Converter

A collection of PowerShell commands to convert Markdown files to static
HTML sites in various ways.

## Components packaged with this module:

| Component                                               |Version | Description
|---------------------------------------------------------|--------|-----------------------------------
| [Markdig](https://github.com/lunet-io/markdig)          | 0.25.0 | Fast Markdown processor for .NET
| [highlight.js](https://highlightjs.org/)                | 9.17.1 | Code syntax highlighter
| [KaTeX](https://katex.org/)                             | 0.13.11| Math typesetting
| [Mermaid](http://mermaid-js.github.io/mermaid/)         | 8.10.1 | Diagramming
|[Svgbob](https://ivanceras.github.io/content/Svgbob.html)| 0.5.0  | Text based diagrammimg

# Known Incompatibilities

If you have have conversion projects which use the _mathematics_ extensions and
were created with versions of this module older than 2.0.0 (i.e. 1.* or 0.*).
See [version 2.0.0](MarkdownToHTML.md#2.0.0) release notes for upgrade instructions.

# Exported Functions

* [Complete-MarkdownPreprocessor](Complete-MarkdownPreprocessor.md)
* [Convert-MarkdownToHTML](Convert-MarkdownToHTML.md)
* [Convert-MarkdownToHTMLFragment](Convert-MarkdownToHTMLFragment.md)
* [Convert-SvgbobToSvg](Convert-SvgbobToSvg.md)
* [ConvertTo-NavigationItem](ConvertTo-NavigationItem.md)
* [Expand-HtmlTemplate](Expand-HtmlTemplate.md)
* [Find-MarkdownFiles](Find-MarkdownFiles.md)
* [New-HTMLTemplate](New-HTMLTemplate.md)
* [New-PageHeadingNavigation](New-PageHeadingNavigation.md)
* [New-SiteNavigation](New-SiteNavigation.md)
* [New-StaticHTMLSiteProject](New-StaticHTMLSiteProject.md)
* [Publish-StaticHtmlSite](Publish-StaticHtmlSite.md)
* [Update-ResourceLinks](Update-ResourceLinks.md)

# Release Notes

## 2.5.0 {#2.5.0}

* [Markdig](https://github.com/lunet-io/markdig)  update to version 0.25.0
* Support for publishing static websites to
  [GitHub Pages](https://docs.github.com/en/pages/getting-started-with-github-pages).

  This new feature is backwards compatible with existing static site projects.
  However, if you want to use this new feature in existing site projects
  following changes must be applied:

  `Build.json` project configuration file
  :   The `site_dir` option needs to be changed and a new option `github_pages`
      must be added as shown below:

      ~~~ json
      {
         ...

         "site_dir": "docs",
         ...
         "github_pages": false,
         ...
      }
      ~~~

      Using the name `docs` for the site directory makes it possible to check-in
      the entire conversion project as-is. As soon as _GitHub Pages_ are
      enabled and configured to publish the static site from the `docs`
      directory, the site is accessible on the web through its canonical
      _GitHub Pages_ url.

  :   Add a statement to disable the GitHub publishing process (jekyll) which
      is not necessary for static sites created by this module. Add
      following code to the end of the build file:

      ~~~ PowerShell
      ...
      if ($config.github_pages) {
	      # Switch off Jekyll publishing when building for GitHub pages
	      New-Item -Path $staticSite -Name .nojekyll -ItemType File
      }
      ~~~
* Added a Markdown pre-processing step to the conversion pipelione.

  The default preprocessing converts [Svgbob](https://ivanceras.github.io/content/Svgbob.html)
  character art diagrams to svg images. See the
  [feature showcase](../index.html#svgbob-plain-text-diagrams)
  for an example.

  This new feature is backwards compatible with existing static site projects.
  However, if you want to use `Svgbob` diagrams in existing site projects
  following changes must be made:

  `Build.json` project configuration file
  :   A new option `svgbob` option needs to be added to for configuration
      of the svg conversion.

      ~~~ json
      {
         ...
         "svgbob": {
            "background":   "white",
            "fill_color":   "black",
            "font_size":    14,
            "font_family":  "Monospace",
            "scale":        1,
            "stroke_width": 2
        }
      }
      ~~~

      See [Static Site Project Customization](about_MarkdownToHTML.md#static-site-project-customization)
      for more details.

    `Build.json` project configuration file
    :   A Preprocessing stage needs to be added to the conversion pipeline:

        ~~~ PowerShell
        # Conversion pipeline
        $SCRIPT:markdown = Join-Path $projectDir $config.markdown_dir
        Find-MarkdownFiles $markdown -Exclude $config.Exclude `
        | ForEach-Object { # Markdown Preprocessor
            Get-Content $_ -Encoding UTF8 `
            | Convert-SvgbobToSvg -SiteDirectory $staticSite `
                                  -RelativePath $_.RelativePath `
                                  -Options $SCRIPT:config.svgbob `
            | Complete-MarkdownPreprocessor -RelativePath $_.RelativePath
          }`
        | Convert-MarkdownToHTMLFragment -IncludeExtension $config.markdown_extensions `
        | Publish-StaticHTMLSite -Template (Join-Path $projectDir $config.HTML_Template) `
                                 -ContentMap  $contentMap `
						         -MediaDirectory $markdown `
	                             -SiteDirectory $staticSite
        ~~~

## 2.4.0 {#2.4.0}

* Navigation bar improvements (Static HTML site projects):

  * scrollbar added to long navbars.
  * `md-styles.css` overhauled for static site template to make navbar usable
    for overflowing navitems
  * HTML fragments with resource links supported in navitem names.
    Example from a `Build.json` which displays a navigatable image:
    ~~~Json
    "site_navigation": [
        { "<img width='90%' src='site_logo.png'/>": "README.md" },
        { "Home": "README.md" },
        { "---": "" }
    ]
    ~~~
  * New commands implemented to remove code duplication and make the `Build.ps1`
    file more consistent.
    Upgrade of the `Build.ps1` file of existing projects is optional. All changes
    are backeard compatible. If you want to upgrade anyways change the content
    map section of`Build.ps1` file like so:
    ~~~ PowerShell
    $SCRIPT:contentMap = @{
	    # Add additional mappings here...
	    '{{footer}}' =  $config.Footer # Footer text from configuration
	    '{{nav}}'    = {
		    param($fragment) # the html fragment created from a markdown file
		    $navcfg = $config.navigation_bar # navigation bar configuration
		    # Create the navigation items configured in 'Build.json'
		    New-SiteNavigation -NavitemSpecs $config.site_navigation `
		                       -RelativePath $fragment.RelativePath `
		                       -NavTemplate $navcfg.templates
		    # Create navigation items to headings on the local page.
		    # This requires the `autoidentifiers` extension to be enabled.
		    New-PageHeadingNavigation -HTMLfragment $fragment.HTMLFragment `
		                              -NavTemplate $navcfg.templates `
		                              -HeadingLevels $navcfg.capture_page_headings
	    }
    }
    ~~~

* Module Documentation
  * Code and conceptial documentation improved
  * Documentation generated with this module and published to
    [GitHub Pages](https://wethat.github.io/MarkdownToHtml)

## 2.3.1 {#2.3.1}

* Navigation bar improvements (Static HTML site projects):
    * default navigation menu changed to a static vertical sidebar.
    * navigation items pop out dynamically on mouse hover.
    * auto-added navigation items for page headings indented according to heading
    level.
    * navbar formatting made more consistent.
    * navbar small screen support

## 2.3.0

* Page navigation bar made customizable. To take advantage of this feature
    in existing projects following files need to be updated:
    * `Build.ps1`: A `-NavTemplate` parameter needs to be added to the invokation of [`ConvertTo-NavigationItem`](ConvertTo-NavigationItem.md).
    A `-NavTemplate` and a `-HeadingLevels` parameter needs to be added to
    the invokation of[`ConvertTo-PageHeadingNavigation`](ConvertTo-PageHeadingNavigation.md).
    For example:

    ~~~ PowerShell
    # Set-up the content mapping rules for replacing the templace placeholders
    $SCRIPT:contentMap = @{
	    # Add additional mappings here...
	    '{{footer}}' =  $config.Footer # Footer text from configuration
	    '{{nav}}'    = {
		    param($fragment) # the html fragment created from a markdown file
		    $navcfg = $config.navigation_bar # navigation bar configuration
		    # Create the navigation items configured in 'Build.json'
		    $config.site_navigation | ConvertTo-NavigationItem -RelativePath $fragment.RelativePath `
		                                                        -NavTemplate $navcfg.templates
		    # Create navigation items to headings on the local page.
		    # This requires the `autoidentifiers` extension to be enabled.
		    ConvertTo-PageHeadingNavigation $fragment.HTMLFragment -NavTemplate $navcfg.templates `
		                                                            -HeadingLevels $navcfg.capture_page_headings
	    }
    }
    ~~~

    * `Build.json`: a navigation bar configuration section needs to be added:

    ~~~ json
    ...
    "navigation_bar": {
        "capture_page_headings": "123456",
        "templates": {
            "navitem": "<button class='navitem'><a href='{{navurl}}'>{{navtext}}</a></button>",
            "navlabel": "<div class='navitem'>{{navtext}}</div>",
            "navseparator": "<hr class='navitem'/>",
            "navheading": "<span class='navitem{{level}}'>{{navtext}}</span>"
        }
    },
    ...
    ~~~

* Component updates:
    * `Markdig` update to version 0.24
    * `KateX` update to version 0.13.11
    * `Mermaid` update to version 8.10.1

## 2.2.2

*  added referenced .net assemblies which may not be guaranteed to be present

## 2.2.1

* Katex Updated to version 0.12.0
* Mermaid updated to version 8.8.2
* Markdig updated to version 0.22.0
* Code signed With long term self signed certificate

## 2.2.0

* Fixed issue with [`ConvertTo-NavigationItem`](ConvertTo-NavigationItem.md) not understanding hyperlinks
    with `#` fragments.
* Added `autoidentifiers` to the `Build.json` in the project template so that
    headings get `id` attributes.
* Added navigation items for headings on the current page to the navbar.

## 2.1.1

* Bugfix: Site assets not copied in build script

## 2.1.0

#### Enhancements

* [`Publish-StaticHtmlSite`](Publish-StaticHtmlSite.md) now accepts definition of custom placeholder
    mappins for expansion of `md-template.html`.
* Default template placeholder delimiters changed to `{{` and `}}`.
* Static HTML site projects added: See [`New-StaticHTMLSiteProject`](New-StaticHTMLSiteProject.md).
* Documentation made more [`Get-Help`](Get-Help.md) friendly.
* _Mermaid_ assets updated to version 8.5.0

#### Maintenance

* Minimum required Powershell version now 5.1 (Desktop)

## 2.0.0 {#2.0.0}

The version of _Markdig_ included in this release introduces an
incompatiblity with projects which use the _mathematics_ extension
**and** were created with versions of this module older than 2.0.0
(i.e. 1.* or 0.*).

To address this incompaibility the _KaTex_ configuration in
**all** deployed html templates (`md_template.html`) need to be updated like so:

~~~ html
<script>
    // <![CDATA[
    window.onload = function() {
        var tex = document.getElementsByClassName("math");
        Array.prototype.forEach.call(tex, function(el) {
            katex.render(el.textContent, el, {
                                                displayMode: (el.nodeName == "DIV"),
                                                macros: {
                                                            "\\(": "",
                                                            "\\)": "",
                                                            "\\[": "",
                                                            "\\]": ""
                                                        }
                                            })
        });
    };
    // ]]>
</script>
~~~

#### New Features

* Highlighting languages _Perl_ and _YAML_ added

#### Maintenance

* Updated to _Markdig_ 0.18.0.
* KaTeX updated to version 0.11.1
* Code syntax highlighting updated to version 9.17.1

#### Bugfixes
* Rendering of math blocks now creates centered output with the correct (bigger) font.
* Changed the default html template (`md_template.html`) to address the incompatible
  change in the LaTeX math output of the _mathematics_ extension of _Markdig_.

## 1.3.0

* upgrade of markdig to version 0.17.2
* KaTex upgraded to 0.11.0
* Re-factored the Markdown converter pipeline and made it parts public
  to make it useful for a broader range of Markdown conversion scenarios.

## 1.2.8

* [`Write-Host`](Write-Host.md) replaced by the more benign [`Write-Verbose`](Write-Verbose.md)
* Minor code cleanup

## 1.2.7

* Empty lines allowed im 'md-template.html` to remove an ugly but harmless
  exception.
* Syntax highlighting updated to version 9.14.2
* Upgrade to markdig version 0.15.7
* Added Resources and configuration for the [mermaid](https://mermaidjs.github.io/) diagram and
  flowchart generator version 8.0.0 to the HTML template.
* Added Resources and configuration for the [KaTeX](https://katex.org/) LaTeX Math
  typesetting library version 0.10.0 to the HTML template.
* Documentation improved.

## 1.2.6

* Powershell Gallery metadata added.

## 1.2.4

* Replaced `[System.Web.HttpUtility]` by `[System.Net.WebUtility]` to fix issue
  when powershell is run with `-noprofile`

## 1.2.3

* Fixed regression introduced in 1.2.2
* Regression test setup

## 1.2.2

* Support for markdown files in a directory hierarchy fixed.
  (directory scanning fixed and relative path added to resource links)

## 1.2.1

Handle partially HTML encoded code blocks

## 1.2.0

* Replaced XML template processing with text based template processing,
  to relax constraints on the HTML fragment quality.
* HTML encode text in `<code>` blocks

## 1.1.0

* Setting of Markdown parser options implemented
* Wildcard support for pathes added

## 1.0.0

Initial Release

---

<cite>Module: MarkDownToHTML; Version: 2.5.0; (c) 2018-2021 WetHat Lab. All rights reserved.</cite>
